# GpuCamera

./: README.md  build.gradle
app/: build.gradle
app/src/androidTest/java/com/gc/bussiness/login/: LoginActivityTest.java
app/src/androidTest/java/com/gc/framework/mvp/: TestComponentRule.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/gc/bussiness/about/: AboutFragment.java  AboutMvpPresenter.java  AboutMvpView.java  AboutPresenter.java
app/src/main/java/com/gc/bussiness/feed/: FeedActivity.java  FeedMvpPresenter.java  FeedMvpView.java  FeedPagerAdapter.java  FeedPresenter.java
app/src/main/java/com/gc/bussiness/gcamera/: GpuCameraActivity.java  GpuCameraMvpPresenter.java  GpuCameraMvpView.java  GpuCameraPresenter.java
app/src/main/res/drawable/: avd_album.xml  avd_camera.xml  avd_production.xml  ic_album.xml  ic_camera.xml  ic_production.xml
app/src/main/res/layout/: activity_gpu_camera.xml  activity_main.xml  drawer_header.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
gpuimage/: .gitignore  CMakeLists.txt  build.gradle
gpuimage/src/jp/co/cyberagent/android/encoder/: MediaAudioEncoder.java  MediaEncoder.java  MediaMuxerWrapper.java  MediaVideoEncoder.java
gpuimage/src/jp/co/cyberagent/android/glutils/: EGLBase.java  GLDrawer2D.java  RenderHandler.java
gpuimage/src/jp/co/cyberagent/android/gpuimage/: GPUImage.java  GPUImageRenderer.java  GpuGLView.java  OpenGlUtils.java  PixelBuffer.java
gpuimage/src/jp/co/cyberagent/android/gpuimage/util/: GpuImageConsts.java
(+116 files in other folders)
